--- a/client/src/app/name/name.component.html
+++ b/client/src/app/name/name.component.html
@@ -2,7 +2,7 @@
 <input [(ngModel)]="name"  /><button (click)="sendName()">Enter</button>
 </div>-->
 <div class="container-fluid">
-<div *ngIf="submitted == false">
+<div *ngIf="submitted == false || name_exists == true">
   <div class="main col-md-12 col-md-offset-5">
     <div class="alert alert-danger" id="errors"></div>
     <div id="login-screen">
@@ -16,11 +16,15 @@
         <button type="button"  (click)="sendName()" name="join" class="btn btn-primary btn-lg" [disabled]="name.length < 3">Enter</button>
 
       </form>
+
     </div>
   </div>
 </div>
 </div>
-<div *ngIf="submitted == true">
+<div *ngIf="name_exists == true" class="text-center text-warning">
+  {{msg.msg}} {{msg.proposedName}}
+</div>
+<div *ngIf="submitted == true && name_exists == false">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">
