alert box for name taken

--- a/client/src/app/name/name.component.html
+++ b/client/src/app/name/name.component.html
@@ -2,9 +2,7 @@
 <input [(ngModel)]="name"  /><button (click)="sendName()">Enter</button>
 </div>-->
 <div class="container-fluid">
-  <div *ngIf="name_exists == true" class="text-center text-warning">
-    {{msg.msg}}
-  </div>
+
 <div *ngIf="submitted == false || name_exists == true">
   <div class="main col-md-12 col-md-offset-5">
     <div class="alert alert-danger" id="errors"></div>
@@ -24,6 +22,10 @@
     </div>
   </div>
 </div>
+
+  <alert type="warning" *ngIf="name_exists == true" class="text-center">
+    {{msg.msg}}
+  </alert>
 </div>
 
 <div *ngIf="submitted == true && name_exists == false">
