--- a/client/src/app/video/video.component.css
+++ b/client/src/app/video/video.component.css
@@ -3,5 +3,5 @@ video{
   margin: 0 auto;
   width:240px;
   height: 240px;
-  background-color: #000;
+  background-color: rgba(255,255,255,0.3);
 }
