moving video container

--- a/client/src/app/video/video.component.html
+++ b/client/src/app/video/video.component.html
@@ -1,10 +1,12 @@
 
 <div class="vids">
   <span class="text-center" id="myId" hidden>Peer id: {{mypeerid}}</span>
-<div class="col-md-6">
+<div class="col-md-3">
 <video #myVideo muted="true" autoplay></video>
-  <video #theirVideo autoplay></video>
 </div>
+  <div class="col-md-3">
+    <video #theirVideo autoplay></video>
+  </div>
 </div>
 
 
