--- a/client/src/app/name/name.component.html
+++ b/client/src/app/name/name.component.html
@@ -40,6 +40,7 @@
         <app-room id="room"></app-room>
         <chat-component id="chat"></chat-component>
       </div>
+      <div class="col-md-1"></div>
       <div class="col-md-6">
         <app-editor id="editor"></app-editor>
       </div>
