moving video container

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -43,9 +43,11 @@ body{
   height: 408px;
   width: 100%;
   position: absolute;
-  top: -150px;
+  top: -200px;
   right: 0;
 }
 #theme, #mode{
+  position: absolute;
+  top: -250px;
   color: #000;
 }
