--- a/client/src/app/people-list/people-list.component.css
+++ b/client/src/app/people-list/people-list.component.css
@@ -1,1 +1,10 @@
-
+li a{
+  width: 3%;
+  display: inline-block !important;
+  color: blue;
+}
+li{
+  padding-left: 5px;
+  color: #000;
+  min-width: 280px;
+}
