--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -49,3 +49,10 @@ body{
 #theme, #mode{
   color: #000;
 }
+.cursor {
+  position: absolute;
+  background: black;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
